--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,14 +5,15 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+<div class="wrapper">
+    <h2 class="my-5">{% trans "Change Password" %}</h2>
     <hr>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn btn-outline-black rounded-0" href="{% url 'profile' %}">Back to Profile</a>
         <button type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
+</div>
 {% endblock %}
