--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,6 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
+<div class="wrapper">
     <h2 class="logo-font my-5">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
 
     {% if token_fail %}
@@ -21,4 +22,5 @@
             <p>{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
+    </div>
 {% endblock %}
