--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,8 +4,9 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+<div class="wrapper">
+
+    <h2 class=" my-5">{% trans "Change Password" %}</h2>
     <p>{% trans 'Your password is now changed.' %}</p>
+</div>
 {% endblock %}
