--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row mt-5 mb-2 mb-md-5">
+    <div class="row mt-5 mb-2 mb-md-3">
         <div class="col">
             <h2>Checkout</h2>
         </div>
@@ -17,7 +17,7 @@
 
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <p class="text-muted">Order Summary ({{ cd_count }} items)</p>
+            <div class="col-12 py-1 my-3 header-upcoming"><strong>Order Summary ({{ cd_count }} items)</strong></div>
             <div class="row">
                 <div class="col-7 offset-2 text-left">
                     <p class="mb-1 mt-0 small text-muted">Item</p>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Please fill out the form below</p>
+        <div class="col-12 py-1 my-3 header-upcoming"><strong>Please fill out the form below</strong></div>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
