--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -28,3 +28,21 @@
 {% block page_footer %}
 <div class="container footer-container"></div>
 {% endblock page_footer %}
+
+{% block postjs %}
+{{ block.super }}
+<script>
+    $(".remove-button").on('click', function(e) {
+        let itemId = $(this).attr("class").split("remove_")[1];
+        let url = `/events/delete_event/`;
+        let csrfToken = "{{ csrf_token }}";
+        let data = {
+            csrfmiddlewaretoken: csrfToken,
+        };
+
+        $.post(`${url}${itemId}/`, data).done(function() {
+            location.reload();
+        });
+    });
+</script>
+{% endblock %}
