Finished events delete confirmation modal

--- a/events/templates/includes/delete_event_modal_sm.html
+++ b/events/templates/includes/delete_event_modal_sm.html
@@ -1,19 +1,19 @@
 <!-- Delete Modal -->
-<div class="modal fade" id="deleteEventModal{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="deleteEventModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="deleteEventModalSm{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="deleteEventModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
         <div class="modal-content modal-contact-content text-center">
             <div class="modal-header">
                 <h5 class="modal-title text-danger font-weight-bold" id="deleteEventModalLabel">Remove Item</h5>
             </div>
             <div class="modal-body">
-                <p class="text-red">
+                <p class="font-weight-normal">
                     <i class="fas fa-exclamation-circle text-danger"></i>
                     Are you sure you want to remove <span class="font-weight-bold">{{ event.name }}</span> from your events?
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn rounded-0 btn-outline-black" data-dismiss="modal">Close</button>
-                <a class="btn btn-black rounded-0 remove-button remove_{{ event.id }}">Remove</a>
+                <button type="button" class="btn btn-sm rounded-0 btn-outline-black" data-dismiss="modal">Close</button>
+                <a class="btn btn-black btn-sm rounded-0 remove-button remove_{{ event.id }}">Remove</a>
             </div>
         </div>
     </div>
