--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -1,14 +1,32 @@
 <div class="container-fluid d-block d-lg-none">
     <div class="row mx-2">
-        <div class="col-12 py-1 my-3 header-upcoming"><strong>Upcoming Events</strong></div>
+        <div class="col-12 py-1 my-3 header-upcoming">
+            <strong>Upcoming Events</strong>
+        </div>
         {% for event in calendar %}
         {% if event.is_future %}
-        <div class="col-3 text-info text-left pl-1 text-grid-events"><small>Date</small></div>
-        <div class="col-9 text-left text-grid-events"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
-        <div class="col-3 text-info text-left pl-1 text-grid-events"><small>Venue</small></div>
-        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
-        <div class="col-3 text-info text-left pl-1 text-grid-events"><small>Programme</small></div>
-        <div class="col-9 text-left text-grid-events">{{ event.programme }}</div>
+        <div class="col-3 text-info text-left pl-1 text-grid-events">
+            <small>Date</small>
+        </div>
+        <div class="col-9 text-left text-grid-events">
+            <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
+        </div>
+        <div class="col-3 text-info text-left pl-1 text-grid-events">
+            <small>Venue</small>
+        </div>
+        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">
+            {% if event.event_url %}
+            <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
+            {% else %}
+            {{ event.venue }}
+            {% endif %}
+        </div>
+        <div class="col-3 text-info text-left pl-1 text-grid-events">
+            <small>Programme</small>
+        </div>
+        <div class="col-9 text-left text-grid-events">
+            {{ event.programme }}
+        </div>
         {% if request.user.is_superuser %}
         <div class="col-6 mb-0 text-left px-0">
             <small class="font-weight-bold">
@@ -21,11 +39,10 @@
         </div>
         <div class="col-6 mb-0 text-right px-0">
             <small class="font-weight-bold">
-                <a class="text-danger" href="{% url 'delete_event' event.id %}">
-                    <span class="icon">
-                        <i class="fas fa-trash"></i>
-                    </span>
+                <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
+                    <i class="fas fa-trash"></i>
                 </a>
+                {% include 'includes/delete_event_modal_sm.html' %}
             </small>
         </div>
         {% endif %}
@@ -33,17 +50,38 @@
         {% endif %}
         {% endfor %}
     </div>
+</div>
 
+
+<div class="container-fluid d-block d-lg-none">
     <div class="row mx-2">
-        <div class="col-12 py-1 my-3 header-past"><strong class="text-light">Past Events</strong></div>
+        <div class="col-12 py-1 my-3 header-past">
+            <strong class="text-light">Past Events</strong>
+        </div>
         {% for event in calendar %}
         {% if event.is_due %}
-        <div class="col-3 text-dark text-left pl-1 text-grid-events"><small>Date</small></div>
-        <div class="col-9 text-left text-grid-events"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
-        <div class="col-3 text-dark text-left pl-1 text-grid-events"><small>Venue</small></div>
-        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
-        <div class="col-3 text-dark text-left pl-1 text-grid-events"><small>Programme</small></div>
-        <div class="col-9 text-left text-grid-events">{{ event.programme }}</div>
+        <div class="col-3 text-dark text-left pl-1 text-grid-events">
+            <small>Date</small>
+        </div>
+        <div class="col-9 text-left text-grid-events">
+            <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
+        </div>
+        <div class="col-3 text-dark text-left pl-1 text-grid-events">
+            <small>Venue</small>
+        </div>
+        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">
+            {% if event.event_url %}
+            <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
+            {% else %}
+            {{ event.venue }}
+            {% endif %}
+        </div>
+        <div class="col-3 text-dark text-left pl-1 text-grid-events">
+            <small>Programme</small>
+        </div>
+        <div class="col-9 text-left text-grid-events">
+            {{ event.programme }}
+        </div>
         <div class="col-12 divider"></div>
         {% if request.user.is_superuser %}
         <div class="col-6 mb-0 text-left px-0">
@@ -57,11 +95,10 @@
         </div>
         <div class="col-6 mb-0 text-right px-0">
             <small class="font-weight-bold">
-                <a class="text-danger" href="{% url 'delete_event' event.id %}">
-                    <span class="icon">
-                        <i class="fas fa-trash"></i>
-                    </span>
+                <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
+                    <i class="fas fa-trash"></i>
                 </a>
+                {% include 'includes/delete_event_modal_sm.html' %}
             </small>
         </div>
         {% endif %}
@@ -69,6 +106,5 @@
         {% endif %}
         {% endfor %}
     </div>
-
-
 </div>
+
