--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -68,5 +68,20 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.3/jquery.nanogallery2.min.js" integrity="sha512-3xu5p0w7hcOqGBH4pfKR04261+kgH7Z5NjdnKQNKL+j+UmyAcTFZzDBzVsV0gN+reoUr/zahjx2TgP84RtyuRg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/3.0.3/jquery.nanogallery2.min.js" integrity="sha512-3xu5p0w7hcOqGBH4pfKR04261+kgH7Z5NjdnKQNKL+j+UmyAcTFZzDBzVsV0gN+reoUr/zahjx2TgP84RtyuRg==" crossorigin="anonymous">
+</script>
+<script>
+    $(".remove-button").on('click', function(e) {
+        let itemId = $(this).attr("class").split("remove_")[1];
+        let url = `/album/delete_media/${itemId}/`;
+        let csrfToken = "{{ csrf_token }}";
+        let data = {
+            csrfmiddlewaretoken: csrfToken,
+        };
+
+        $.post(url, data).done(function() {
+            location.reload();
+        });
+    });
+</script>
 {% endblock %}
