--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -28,82 +28,8 @@
         <div class="product-container col-10 offset-1">
             <div class="row">
                 {% for cd in cds %}
-                <div class="col col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 border-0">
-                        <div class="card-body pb-3 pt-2">
-                            <p class="mb-0  font-weight-bold">{{ cd.name }}</p>
-                        </div>
-                        {% if cd.image %}
-                        <div class="card-image">
-                            <a href="{% url 'cd_detail' cd.id %}">
-                                <img src="{{ cd.image.url }}" alt="{{ cd.name }}" class="card-img-top img-fluid">
-                                <div class="overlay-cd"></div>
-                            </a>
-                        </div>
-                        {% else %}
-                        <div class="card-image">
-                            <a href="{% url 'cd_detail' cd.id %}">
-                                <img src="{{ MEDIA_URL }}noimage.png" alt="{{ cd.name }}" class="card-img-top img-fluid">
-                                <div class="overlay-cd"></div>
-                            </a>
-                        </div>
-                        {% endif %}
-                        <div class="card-footer bg-white py-0 border-0 text-left">
-                            <div class="row">
-                                <div class="col text-center">
-                                    <p class="font-weight-bold mb-0 py-3">€{{ cd.price }}</p>
-                                    {% if request.user.is_superuser %}
-                                    <p class="ml-3 font-weight-bold">
-                                        <a href="{% url 'edit_cd' cd.id %}">
-                                            <span class="icon">
-                                                <i class="fas fa-edit"></i>
-                                            </span>
-                                        </a> |
-                                        <a class="text-danger" href="{% url 'delete_cd' cd.id %}">
-                                            <span class="icon">
-                                                <i class="fas fa-trash"></i>
-                                            </span>
-                                        </a>
-                                    </p>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                        <form class="form" action="{% url 'add_to_bag' cd.id %}" method="POST">
-                            {% csrf_token %}
-                            <div class="form-row">
-                                <div class="col">
-                                    <a href="{% url 'cd_detail' cd.id %}" class="btn btn-sm btn-outline-black rounded-0 mt-0">
-                                        <span class="text-uppercase">Details</span>
-                                    </a>
-                                    <input class="form-control qty_input" type="hidden" name="quantity" value="1" data-item_id="{{ cd.id }}" id="id_qty_{{ cd.id }}">
-                                    <input type="submit" class="btn btn-sm btn-black rounded-0 text-uppercase mt-0" value="Add to Bag">
-                                </div>
-                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                {% if forloop.counter|divisibleby:1 %}
-                <div class="col-12 d-sm-none mb-2">
-                    <hr>
-                </div>
-                {% endif %}
-                {% if forloop.counter|divisibleby:2 %}
-                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-2">
-                    <hr>
-                </div>
-                {% endif %}
-                {% if forloop.counter|divisibleby:3 %}
-                <div class="col-12 d-none d-lg-block d-xl-none mb-2">
-                    <hr>
-                </div>
-                {% endif %}
-                {% if forloop.counter|divisibleby:4 %}
-                <div class="col-12 d-none d-xl-block mb-2">
-                    <hr>
-                </div>
-                {% endif %}
+                {% include 'includes/shop_contents.html' %}
+                {% include 'includes/dividers.html' %}
                 {% endfor %}
             </div>
         </div>
