Replaced left arrow icon

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -98,7 +98,7 @@
                 <div class="submit-button text-center text-md-right mt-5 mb-2 pr-md-3">
                     <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
                         <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
+                            <i class="fas fa-arrow-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Bag</span>
                     </a>
