--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -105,7 +105,7 @@
                 <p class="lead mb-5">Your bag is empty.</p>
                 <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg mb-5">
                     <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
+                        <i class="fas fa-arrow-left"></i>
                     </span>
                     <span class="text-uppercase">
                         Back to Shopping
