--- a/bag/templates/includes/checkout-buttons.html
+++ b/bag/templates/includes/checkout-buttons.html
@@ -1,6 +1,6 @@
 <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg">
     <span class="icon">
-        <i class="fas fa-chevron-left"></i>
+        <i class="fas fa-arrow-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
