Replaced words by icons for update/delete bag contents

--- a/bag/templates/includes/quantity-form.html
+++ b/bag/templates/includes/quantity-form.html
@@ -20,5 +20,9 @@
         </div>
     </div>
 </form>
-<a class="update-link text-info float-left"><small>Update</small></a>
-<a class="remove-item update-link text-danger float-right" id="remove_{{ item.item_id }}"><small>Delete</small></a>
+<a class="update-link text-info float-left">
+    <i class="fas fa-sync-alt lead text-info"></i>
+</a>
+<a class="remove-item update-link text-danger float-right" id="remove_{{ item.item_id }}">
+    <i class="fas fa-trash lead text-danger"></i>
+</a>
