--- a/bag/templates/includes/quantity-form.html
+++ b/bag/templates/includes/quantity-form.html
@@ -23,6 +23,9 @@
 <a class="update-link text-info float-left">
     <i class="fas fa-sync-alt lead text-info"></i>
 </a>
-<a class="remove-item update-link text-danger float-right" id="remove_{{ item.item_id }}">
+{% comment %} <a class="remove-item update-link text-danger float-right" id="remove_{{ item.item_id }}">
     <i class="fas fa-trash lead text-danger"></i>
-</a>
+</a> {% endcomment %}
+        <a class="float-right" title="Remove" data-toggle="modal" data-target="#deleteBagModal{{ forloop.counter }}">
+            <i class="fas fa-trash lead text-danger"></i>
+        </a>
