--- a/events/templates/includes/delete_event_modal.html
+++ b/events/templates/includes/delete_event_modal.html
@@ -6,7 +6,7 @@
                 <h5 class="modal-title text-danger font-weight-bold" id="deleteEventModalLabel">Remove Item</h5>
             </div>
             <div class="modal-body">
-                <p class="text-red">
+                <p class="font-weight-normal">
                     <i class="fas fa-exclamation-circle text-danger"></i>
                     Are you sure you want to remove <span class="font-weight-bold">{{ event.name }}</span> from your events?
                 </p>
