--- a/events/templates/includes/event_grid_lg.html
+++ b/events/templates/includes/event_grid_lg.html
@@ -1,88 +1,75 @@
-<div class="container d-none d-lg-block">
-    <div class="row mt-5">
-        <div class="col-12 py-3 font-weight-bold lead">Upcoming Events</div>
-        <div class="container mb-3">
-            <div class="row">
-                <div class="col-3 font-weight-bold header-upcoming text-dark text-left py-3">Date</div>
-                <div class="col-3 font-weight-bold header-upcoming text-dark text-left py-3">Venue</div>
-                <div class="col-6 font-weight-bold header-upcoming text-dark text-left py-3">Programme</div>
-            </div>
-        </div>
-        {% for event in calendar %}
-        {% if event.is_future %}
-        <div class="container mb-2">
-            <div class="row">
-                <div class="col-3 bg-white text-left py-1">
-                    <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
-                    {% if request.user.is_superuser %}
-                    <p class="font-weight-bold">
-                        <a href="{% url 'edit_event' event.id %}">
-                            <span class="icon">
-                                <i class="fas fa-edit"></i>
-                            </span>
-                        </a> |
-                        <a class=" text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModal{{ forloop.counter }}">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                        {% include 'includes/delete_event_modal.html' %}
-                    </p>
-                    {% endif %}
-                </div>
-                <div class="col-3 {% if event.event_url %}link-venue{% endif %} bg-white text-left py-1">
-                    {% if event.event_url %}
-                    <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
-                    {% else %}
-                    {{ event.venue }}
-                    {% endif %}
-                </div>
-                <div class="col-6 bg-white text-left py-1">{{ event.programme }}</div>
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
-    </div>
+<div class="row mt-md-5">
+    <div class="col-12 py-3 font-weight-bold lead d-none d-md-block">Upcoming Events</div>
+    <div class="col-3 font-weight-bold header-upcoming text-dark text-left py-3 mb-5 d-none d-md-block">Date</div>
+    <div class="col-3 font-weight-bold header-upcoming text-dark text-left py-3 mb-5 d-none d-md-block">Venue</div>
+    <div class="col-6 font-weight-bold header-upcoming text-dark text-left py-3 mb-5 d-none d-md-block">Programme</div>
 
-    <div class="row">
-        <div class="col-12 py-3 font-weight-bold lead">Past Events</div>
-        <div class="container mb-3">
-            <div class="row">
-                <div class="col-3 font-weight-bold header-past text-light text-left py-3">Date</div>
-                <div class="col-3 font-weight-bold header-past text-light text-left py-3">Venue</div>
-                <div class="col-6 font-weight-bold header-past text-light text-left py-3">Programme</div>
-            </div>
-        </div>
-        {% for event in calendar %}
-        {% if event.is_due %}
-        <div class="container mb-2">
-            <div class="row">
-                <div class="col-3  bg-white text-left py-1">
-                    <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
-                    {% if request.user.is_superuser %}
-                    <p class="font-weight-bold">
-                        <a href="{% url 'edit_event' event.id %}">
-                            <span class="icon">
-                                <i class="fas fa-edit"></i>
-                            </span>
-                        </a> |
-                        <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModal{{ forloop.counter }}">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                        {% include 'includes/delete_event_modal.html' %}
-                    </p>
-                    {% endif %}
-                </div>
-                <div class="col-3  {% if event.event_url %}link-venue{% endif %} bg-white text-left py-1">
-                    {% if event.event_url %}
-                    <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
-                    {% else %}
-                    {{ event.venue }}
-                    {% endif %}
-                </div>
-                <div class="col-6  bg-white text-left py-1">{{ event.programme }}</div>
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
-    </div>
+    {% for event in calendar %}
+    {% if event.is_future %}
 
+    <div class="col-3 bg-white text-left py-1 d-none d-md-block">
+        <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
+        {% if request.user.is_superuser %}
+        <p class="font-weight-bold">
+            <a href="{% url 'edit_event' event.id %}">
+                <span class="icon">
+                    <i class="fas fa-edit"></i>
+                </span>
+            </a> |
+            <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModal{{ forloop.counter }}">
+                <i class="fas fa-trash"></i>
+            </a>
+        </p>
+        {% include 'includes/delete_event_modal.html' %}
+        {% endif %}
+    </div>
+    <div class="col-3 {% if event.event_url %}link-venue{% endif %} bg-white text-left py-1 d-none d-md-block">
+        {% if event.event_url %}
+        <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
+        {% else %}
+        {{ event.venue }}
+        {% endif %}
+    </div>
+    <div class="col-6 bg-white text-left py-1 d-none d-md-block">{{ event.programme }}</div>
+
+    {% endif %}
+    {% endfor %}
+</div>
+
+<div class="row">
+    <div class="col-12 py-3 font-weight-bold lead d-none d-md-block">Past Events</div>
+    <div class="col-3 font-weight-bold header-past text-light text-left py-3 mb-5 d-none d-md-block">Date</div>
+    <div class="col-3 font-weight-bold header-past text-light text-left py-3 mb-5 d-none d-md-block">Venue</div>
+    <div class="col-6 font-weight-bold header-past text-light text-left py-3 mb-5 d-none d-md-block">Programme</div>
+
+    {% for event in calendar %}
+    {% if event.is_due %}
+
+    <div class="col-3 bg-white text-left py-1 d-none d-md-block">
+        <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
+        {% if request.user.is_superuser %}
+        <p class="font-weight-bold">
+            <a href="{% url 'edit_event' event.id %}">
+                <span class="icon">
+                    <i class="fas fa-edit"></i>
+                </span>
+            </a> |
+            <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModal{{ forloop.counter }}">
+                <i class="fas fa-trash"></i>
+            </a>
+            {% include 'includes/delete_event_modal.html' %}
+        </p>
+        {% endif %}
+    </div>
+    <div class="col-3 {% if event.event_url %}link-venue{% endif %} bg-white text-left py-1 d-none d-md-block">
+        {% if event.event_url %}
+        <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
+        {% else %}
+        {{ event.venue }}
+        {% endif %}
+    </div>
+    <div class="col-6  bg-white text-left py-1 d-none d-md-block">{{ event.programme }}</div>
+
+    {% endif %}
+    {% endfor %}
 </div>
