--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -1,110 +1,104 @@
-<div class="container-fluid d-block d-lg-none">
-    <div class="row mx-2">
-        <div class="col-12 py-1 my-3 header-upcoming">
-            <strong>Upcoming Events</strong>
-        </div>
-        {% for event in calendar %}
-        {% if event.is_future %}
-        <div class="col-3 text-info text-left pl-1 text-grid-events">
-            <small>Date</small>
-        </div>
-        <div class="col-9 text-left text-grid-events">
-            <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
-        </div>
-        <div class="col-3 text-info text-left pl-1 text-grid-events">
-            <small>Venue</small>
-        </div>
-        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">
-            {% if event.event_url %}
-            <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
-            {% else %}
-            {{ event.venue }}
-            {% endif %}
-        </div>
-        <div class="col-3 text-info text-left pl-1 text-grid-events">
-            <small>Programme</small>
-        </div>
-        <div class="col-9 text-left text-grid-events">
-            {{ event.programme }}
-        </div>
-        {% if request.user.is_superuser %}
-        <div class="col-6 mb-0 text-left px-0">
-            <small class="font-weight-bold">
-                <a href="{% url 'edit_event' event.id %}">
-                    <span class="icon">
-                        <i class="fas fa-edit"></i>
-                    </span>
-                </a>
-            </small>
-        </div>
-        <div class="col-6 mb-0 text-right px-0">
-            <small class="font-weight-bold">
-                <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
-                    <i class="fas fa-trash"></i>
-                </a>
-                {% include 'includes/delete_event_modal_sm.html' %}
-            </small>
-        </div>
-        {% endif %}
-        <div class="col-12 events-divider"></div>
-        {% endif %}
-        {% endfor %}
+<div class="row mx-2">
+    <div class="col-12 py-1 my-3 header-upcoming d-md-none">
+        <strong>Upcoming Events</strong>
     </div>
+    {% for event in calendar %}
+    {% if event.is_future %}
+    <div class="col-3 text-info text-left pl-1 text-grid-events d-md-none">
+        <small>Date</small>
+    </div>
+    <div class="col-9 text-left text-grid-events d-md-none">
+        <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
+    </div>
+    <div class="col-3 text-info text-left pl-1 text-grid-events d-md-none">
+        <small>Venue</small>
+    </div>
+    <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events d-md-none">
+        {% if event.event_url %}
+        <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
+        {% else %}
+        {{ event.venue }}
+        {% endif %}
+    </div>
+    <div class="col-3 text-info text-left pl-1 text-grid-events d-md-none">
+        <small>Programme</small>
+    </div>
+    <div class="col-9 text-left text-grid-events d-md-none">
+        {{ event.programme }}
+    </div>
+    {% if request.user.is_superuser %}
+    <div class="col-6 mb-0 text-left px-0 d-md-none">
+        <small class="font-weight-bold">
+            <a href="{% url 'edit_event' event.id %}">
+                <span class="icon">
+                    <i class="fas fa-edit"></i>
+                </span>
+            </a>
+        </small>
+    </div>
+    <div class="col-6 mb-0 text-right px-0 d-block d-md-none">
+        <small class="font-weight-bold">
+            <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
+                <i class="fas fa-trash"></i>
+            </a>
+            {% include 'includes/delete_event_modal_sm.html' %}
+        </small>
+    </div>
+    {% endif %}
+    <div class="col-12 events-divider d-md-none"></div>
+    {% endif %}
+    {% endfor %}
 </div>
 
-
-<div class="container-fluid d-block d-lg-none">
-    <div class="row mx-2">
-        <div class="col-12 py-1 my-3 header-past">
-            <strong class="text-light">Past Events</strong>
-        </div>
-        {% for event in calendar %}
-        {% if event.is_due %}
-        <div class="col-3 text-dark text-left pl-1 text-grid-events">
-            <small>Date</small>
-        </div>
-        <div class="col-9 text-left text-grid-events">
-            <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
-        </div>
-        <div class="col-3 text-dark text-left pl-1 text-grid-events">
-            <small>Venue</small>
-        </div>
-        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">
-            {% if event.event_url %}
-            <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
-            {% else %}
-            {{ event.venue }}
-            {% endif %}
-        </div>
-        <div class="col-3 text-dark text-left pl-1 text-grid-events">
-            <small>Programme</small>
-        </div>
-        <div class="col-9 text-left text-grid-events">
-            {{ event.programme }}
-        </div>
-        <div class="col-12 divider"></div>
-        {% if request.user.is_superuser %}
-        <div class="col-6 mb-0 text-left px-0">
-            <small class="font-weight-bold">
-                <a href="{% url 'edit_event' event.id %}">
-                    <span class="icon">
-                        <i class="fas fa-edit"></i>
-                    </span>
-                </a>
-            </small>
-        </div>
-        <div class="col-6 mb-0 text-right px-0">
-            <small class="font-weight-bold">
-                <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
-                    <i class="fas fa-trash"></i>
-                </a>
-                {% include 'includes/delete_event_modal_sm.html' %}
-            </small>
-        </div>
-        {% endif %}
-        <div class="col-12 events-divider"></div>
-        {% endif %}
-        {% endfor %}
+<div class="row mx-2">
+    <div class="col-12 py-1 my-3 header-past d-md-none">
+        <strong class="text-light">Past Events</strong>
     </div>
+    {% for event in calendar %}
+    {% if event.is_due %}
+    <div class="col-3 text-dark text-left pl-1 text-grid-events d-md-none">
+        <small>Date</small>
+    </div>
+    <div class="col-9 text-left text-grid-events d-md-none">
+        <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
+    </div>
+    <div class="col-3 text-dark text-left pl-1 text-grid-events d-md-none">
+        <small>Venue</small>
+    </div>
+    <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events d-md-none">
+        {% if event.event_url %}
+        <a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>
+        {% else %}
+        {{ event.venue }}
+        {% endif %}
+    </div>
+    <div class="col-3 text-dark text-left pl-1 text-grid-events d-md-none">
+        <small>Programme</small>
+    </div>
+    <div class="col-9 text-left text-grid-events d-md-none">
+        {{ event.programme }}
+    </div>
+    <div class="col-12 divider d-md-none"></div>
+    {% if request.user.is_superuser %}
+    <div class="col-6 mb-0 text-left px-0 d-md-none">
+        <small class="font-weight-bold">
+            <a href="{% url 'edit_event' event.id %}">
+                <span class="icon">
+                    <i class="fas fa-edit"></i>
+                </span>
+            </a>
+        </small>
+    </div>
+    <div class="col-6 mb-0 text-right px-0 d-md-none">
+        <small class="font-weight-bold">
+            <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
+                <i class="fas fa-trash"></i>
+            </a>
+            {% include 'includes/delete_event_modal_sm.html' %}
+        </small>
+    </div>
+    {% endif %}
+    <div class="col-12 events-divider d-md-none"></div>
+    {% endif %}
+    {% endfor %}
 </div>
-
