--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -4,13 +4,13 @@
     </div>
     {% for event in calendar %}
     {% if event.is_future %}
-    <div class="col-3 text-info text-left pl-1 text-grid-events d-md-none">
+    <div class="col-3 text-left pl-1 text-grid-events d-md-none">
         <small>Date</small>
     </div>
     <div class="col-9 text-left text-grid-events d-md-none">
         <small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
     </div>
-    <div class="col-3 text-info text-left pl-1 text-grid-events d-md-none">
+    <div class="col-3 text-left pl-1 text-grid-events d-md-none">
         <small>Venue</small>
     </div>
     <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events d-md-none">
@@ -20,7 +20,7 @@
         {{ event.venue }}
         {% endif %}
     </div>
-    <div class="col-3 text-info text-left pl-1 text-grid-events d-md-none">
+    <div class="col-3 text-left pl-1 text-grid-events d-md-none">
         <small>Programme</small>
     </div>
     <div class="col-9 text-left text-grid-events d-md-none">
@@ -54,7 +54,7 @@
     <div class="col-12 py-1 my-3 header-past d-md-none">
         <strong class="text-light">Past Events</strong>
     </div>
-    {% for event in calendar %}
+    {% for event in calendar reversed %}
     {% if event.is_due %}
     <div class="col-3 text-dark text-left pl-1 text-grid-events d-md-none">
         <small>Date</small>
