Refined animations of gallery

--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -22,14 +22,21 @@
                     "thumbnailGutterHeight" : 2,
                     "thumbnailBorderHorizontal" : 0,
                     "thumbnailBorderVertical" : 0,
+                    "thumbnailAlignments": "scaled",
                     "gallerySorting": "random",
                     "galleryDisplayTransition": "slideUp",
                     "galleryResizeAnimation": true,
                     "galleryDisplayTransitionDuration": 1000,
                     "thumbnailDisplayOrder": "random",
                     "thumbnailDisplayTransition": "scaleUp",
-                    "thumbnailDisplayTransitionDuration": 500,
+                    "thumbnailDisplayTransitionDuration": 1500,
+                    "thumbnailDisplayInterval": 60,
                     "thumbnailHoverEffect2": "imageGrayOn",
+                    "galleryTheme": {
+                        "thumbnail": {
+                            "background": "#fff"
+                        }
+                    },
                     "viewerToolbar": {
                         "display": true,
                         "standard": "minimizeButton, shareButton, fullscreenButton",
