--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -20,8 +20,8 @@
             </div>
         </div>
         {% if bag_items %}
-        {% include 'includes/bag_contents_sm.html' %}
         {% include 'includes/bag_contents_md.html' %}
+        {% include 'includes/bag_contents_sm.html' %}
         {% else %}
         <div class="row">
             <div class="col">
@@ -43,6 +43,6 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'shop/js/quantity_input_script.min.js' %}"></script>
-<script src="{% static 'bag/js/update_delete_scripts.min.js' %}"></script>
+<script src="{% static 'shop/js/quantity_input_script.js' %}"></script>
+<script src="{% static 'bag/js/update_delete_scripts.js' %}"></script>
 {% endblock postjs %}
