--- a/bag/templates/includes/quantity-form.html
+++ b/bag/templates/includes/quantity-form.html
@@ -1,4 +1,4 @@
-<form action="{% url 'adjust_bag' item.item_id %}" method="POST" class="form update-form">
+<form action="{% url 'adjust_bag' item.item_id %}" method="POST" class="form update-form" id="cart-form-{{ forloop.counter }}">
     {% csrf_token %}
     <div class="form-group">
         <div class="input-group">
@@ -19,8 +19,11 @@
             </div>
         </div>
     </div>
+    <div class="pt-0 error-message d-none">
+        <small class="mt-0 text-danger small">Invalid value</small>
+    </div>
 </form>
-<a class="update-link text-info float-left">
+<a class="update-link text-info float-left" data-number="{{ forloop.counter }}">
     <i class="fas fa-sync-alt lead text-info"></i>
 </a>
 <a class="float-right" title="Remove" data-toggle="modal" data-target="#deleteBagModal{{ forloop.counter }}">
