Given extra information on validation error for qty input form

--- a/bag/templates/includes/quantity-form.html
+++ b/bag/templates/includes/quantity-form.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="pt-0 error-message d-none">
-        <small class="mt-0 text-danger small">Invalid value</small>
+        <small class="mt-0 text-danger small">Invalid value (1-99)</small>
     </div>
 </form>
 <a class="update-link text-info float-left" data-number="{{ forloop.counter }}">
