--- a/shop/templates/includes/cd_details_content.html
+++ b/shop/templates/includes/cd_details_content.html
@@ -47,7 +47,11 @@
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
+                            {% if cd.out_of_stock %}
+                            <input disabled type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Sould Out">
+                            {% else %}
                             <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            {% endif %}
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
