--- a/shop/templates/includes/shop_contents.html
+++ b/shop/templates/includes/shop_contents.html
@@ -25,6 +25,21 @@
                 </div>
             </div>
         </div>
+        {% if cd.out_of_stock %}
+        <form class="form" action="{% url 'add_to_bag' cd.id %}" method="POST">
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="col">
+                    <a href="{% url 'cd_detail' cd.id %}" class="btn btn-sm btn-outline-black rounded-0 mt-0">
+                        <span class="text-uppercase">Details</span>
+                    </a>
+                    <input class="form-control qty_input" type="hidden" name="quantity" value="1" data-item_id="{{ cd.id }}" id="id_qty_{{ cd.id }}">
+                    <input type="submit" disabled="disabled" class="btn btn-sm btn-black rounded-0 text-uppercase mt-0" value="Sould Out">
+                </div>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+            </div>
+        </form>
+        {% else %}
         <form class="form" action="{% url 'add_to_bag' cd.id %}" method="POST">
             {% csrf_token %}
             <div class="form-row">
@@ -38,5 +53,6 @@
                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </div>
         </form>
+        {% endif %}
     </div>
 </div>
