Corrected typo in sold out button

--- a/shop/templates/includes/cd_details_content.html
+++ b/shop/templates/includes/cd_details_content.html
@@ -48,7 +48,7 @@
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
                             {% if cd.out_of_stock %}
-                            <input disabled type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Sould Out">
+                            <input disabled type="submit" class="btn-disabled btn btn-black rounded-0 text-uppercase mt-5" value="Sold Out">
                             {% else %}
                             <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             {% endif %}
