--- a/shop/templates/includes/shop_contents.html
+++ b/shop/templates/includes/shop_contents.html
@@ -26,19 +26,12 @@
             </div>
         </div>
         {% if cd.out_of_stock %}
-        <form class="form" action="{% url 'add_to_bag' cd.id %}" method="POST">
-            {% csrf_token %}
-            <div class="form-row">
-                <div class="col">
-                    <a href="{% url 'cd_detail' cd.id %}" class="btn btn-sm btn-outline-black rounded-0 mt-0">
-                        <span class="text-uppercase">Details</span>
-                    </a>
-                    <input class="form-control qty_input" type="hidden" name="quantity" value="1" data-item_id="{{ cd.id }}" id="id_qty_{{ cd.id }}">
-                    <input type="submit" disabled="disabled" class="btn btn-sm btn-black rounded-0 text-uppercase mt-0" value="Sould Out">
-                </div>
-                <input type="hidden" name="redirect_url" value="{{ request.path }}">
-            </div>
-        </form>
+        <div class="col">
+            <a href="{% url 'cd_detail' cd.id %}" class="btn btn-sm btn-outline-black rounded-0 mt-0">
+                <span class="text-uppercase">Details</span>
+            </a>
+            <input type="submit" disabled="disabled" class="btn-disabled btn btn-sm btn-black rounded-0 text-uppercase mt-0" value="Sold Out">
+        </div>
         {% else %}
         <form class="form" action="{% url 'add_to_bag' cd.id %}" method="POST">
             {% csrf_token %}
