--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -91,10 +91,10 @@
     </div>
     <div class="col-6 mb-0 text-right px-0 d-md-none">
         <small class="font-weight-bold">
-            <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalSm{{ forloop.counter }}">
+            <a class="text-danger" title="Remove" data-toggle="modal" data-target="#deleteEventModalPastSm{{ forloop.counter }}">
                 <i class="fas fa-trash"></i>
             </a>
-            {% include 'includes/delete_event_modal_sm.html' %}
+            {% include 'includes/delete_event_modal_past_sm.html' %}
         </small>
     </div>
     {% endif %}
