--- a/events/templates/events/edit_event.html
+++ b/events/templates/events/edit_event.html
@@ -34,3 +34,21 @@
 {% block page_footer %}
 <div class="container footer-container"></div>
 {% endblock page_footer %}
+
+{% block postjs %}
+{{ block.super }}
+<script>
+// Adds 'https://' on blur if there's content in the input, validating it,
+// avoiding needing to enter it manually.
+//https://stackoverflow.com/questions/17946960/with-html5-url-input-validation-assume-url-starts-with-http
+    $(function() {
+        $('input[type="url"]').on('blur', function() {
+            var string = $(this).val();
+            if (!string.match(/^https?:/) && string.length) {
+                string = "https://" + string;
+                $(this).val(string)
+            }
+        });
+    });
+</script>
+{% endblock postjs %}
